security/network-policy/postgres-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-network-policy
  namespace: security-app
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels: 
              app: backend
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: security-app
      ports:
        - protocol: TCP
          port: 5432
